Facades/js/openui5.template.css
/* ... */
.sapUxAPObjectPageHeaderContent .exf-label-horizontal.exf-label-for-text > .sapUiHLayoutChildWrapper:last-of-type {margin-top: 1px}
.sapUxAPObjectPageHeaderContent .exf-label-horizontal.exf-label-for-text,
.sapUxAPObjectPageHeaderContent .sapUiVltCell > .sapMFT {margin-top: 0.25rem}
/* TextHeading widgets in dialog headers*/
.sapUxAPObjectPageHeaderContent .sapMLabel.exf-textheading {vertical-align: middle}
/* Dialog (non-max) */
html.sap-phone .sapMDialog {min-width: 20rem !important}
html.sap-tablet .sapMDialog, html.sap-desktop .sapMDialog {min-width: 25rem !important}
/* Dialog header for small dialogs */
.sapMDialog.exf-dialog-with-header:not(.sapMDialogWithSubHeader)>header:first-of-type .sapMIBar{box-shadow: none;}
.sapMDialog.exf-dialog-with-header .sapUxAPObjectPageHeaderContent {padding: 0.325rem 2rem 0 2rem; box-shadow: 0 0 0.25rem 0 rgb(0 0 0 / 15%), inset 0 -0.0625rem 0 0 #d9d9d9;}
/* Remove extra space at bottom of last WidgetGroup in a small dialog */
.sapMDialog .sapUiRespGrid > .sapUiRespGridSpanS12:last-of-type > .sapUiRGLContainer > .sapUiRGLContainerCont > .sapUiRespGrid:last-of-type {padding-bottom: 0;}

/* DataLookupDialog */
.sapMDialog > .sapMDialogSection > .sapMDialogScroll {height: 100%}
.sapMDialog .sapMVBox > .sapMFlexItemAlignAuto {height: 100%}
.exf-datalookup-tokenizer .sapMInputBaseIconContainer {display: none !important;}
.exf-datalookup .sapMPanelWrappingDivTb, .exf-datalookup .sapMPanelContent:not(.sapMPanelBGTransparent) {border: none !important;}

/* Textual busy overlays */
.exf-busy-text .sapUiLocalBusyIndicatorAnimation {display: none}
.exf-busy-text-content {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}

/* Wizard */
.exf-wizard-step-hide-caption > .sapMWizardStepTitle {visibility: hidden; height: 0px; margin: 0;}
/* FIX next-button of mobile wizzards floating in the upper part of the screen - even if the wizard itself is not visible! */
html.sap-phone .sapMWizard .sapMWizardNextButtonVisible {position: relative !important; left: inherit !important; bottom: inherit !important;}

/* Map */
.exf-map {z-index: 0}
.exf-map-popup h3 {padding-left: 0}
.exf-map-popup-table > tbody > tr > td:nth-of-type(2) {font-weight: bold}
.exf-map .extra-marker > i.fa-map-marker {margin-top: 8px !important;}
.exf-map .extra-marker > .exf-svg-icon > svg {height: 20px; margin-top: 8px; fill: white;}
.exf-map .leaflet-marker-icon.selected:not(.exf-map-point)::before {content: ''; display: block; width: 40px; height: 27px; -moz-border-radius: 7.5px; -webkit-border-radius: 7.5px; border-radius: 50%; border: 5px solid gray; position: absolute; top: 23px; left: -7px; z-index: -1;}
.exf-map .leaflet-marker-icon.selected.exf-map-point > div:first-of-type {border: 5px solid gray; margin-top: -5px; margin-left: -5px}
.exf-map-point-value {position: absolute; white-space: nowrap;}
.exf-map-point-center {transform: translate(-50%, -50%); top: 50%; left: 50%;}
.exf-map-point-left {transform: translate(-110%, -50%); top: 50%;}
.exf-map-point-right {transform: translate(20%, -50%); top:50%;}
.exf-map-point-top {transform: translate(-50%, -150%); left: 50%;}
.exf-map-point-bottom {transform: translate(-50%, 0%); left: 50%;}
.exf-map .marker-cluster {background-clip: padding-box; border-radius: 20px;}
.exf-map .marker-cluster div {width: 30px; height: 30px; margin-left: 5px; margin-top: 5px; color: white; text-align: center; border-radius: 15px;}
.exf-map .marker-cluster i {line-height: 30px;}
.exf-map-shape-title.leaflet-tooltip {background-color: transparent; border: none; box-shadow: none; font-weight: 600; text-shadow: 0 0 3px white;}
.exf-map-shape-selected {fill-opacity: 0.4; stroke-width: 2; stroke: rgb(8, 84, 160)}
.exf-map-shape-hover {fill-opacity: 0.4; stroke-width: 1; stroke: black}
.blinking-shape { animation: blinker 2s linear infinite; }
@keyframes blinker { 50% { opacity: 0; } }

/* Slick carousel: ImageGallery */
.slick-carousel.horizontal .slick-list {padding: 10px; box-sizing: border-box;}
.slick-carousel.horizontal .slick-list, 
.slick-carousel.horizontal .slick-track, 
.slick-carousel.horizontal .slick-slide, 
.slick-carousel.horizontal .slick-slide img {height: 100%}
.slick-carousel.horizontal .slick-slide {margin-left: 10px; box-sizing: border-box;}
.slick-carousel.horizontal .slick-prev.slick-arrow {left: 5px; z-index: 1;}
.slick-carousel.horizontal .slick-next.slick-arrow {right: 5px; z-index: 1;}
.slick-carousel.horizontal .slick-arrow:before {color: #404040}
.slick-carousel .slick-slide {overflow: hidden;}
.slick-carousel .slick-slide.selected {border: 5px solid #9cc8f7}
.slick-lightbox .slick-prev.slick-arrow {z-index: 1}
.imagecarousel-file {height: 100%; width: 180px; position: relative; background-color: #f5f5f5; cursor: pointer;}
.imagecarousel-file > i {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 200%}
.imagecarousel-title {bottom: 0; position: absolute; padding: 10px; font-size: 0.8rem; text-align: center; width: calc(100% - 20px);}
.imagecarousel-overlay {position: absolute; top: 0; width: 100%; height: 100%}
.imagecarousel-pending {position: relative; }
.imagecarousel-pending button {position: absolute; right: 0; bottom: 0; background: transparent; border: none; font-size: 2rem; opacity: .7; cursor: pointer;}
.imagecarousel-file {background-color: white; border: 1px solid rgb(217, 217, 217);}
.imagecarousel-nodata > .sapUiIcon::before {font-family: SAP-icons; content: "\e172";}

/* DataCarousel */
.exf-datacarousel-details {position: relative}
/* DataCarousel with tabs */
.exf-datacarousel-details > .sapMPanelContent > .sapMITB {margin-top: 30px;}
.exf-datacarousel-details > .sapMPanelContent > .sapMITB > .sapMITH {background-color: transparent;}

.exf-datacarousel-details > .sapUiBlockLayer,
.exf-datacarousel-details > .sapUiLocalBusyIndicator {
    background-color: rgb(247, 247, 247);
    z-index: 10;
}
/* ... */

